--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
-        "textalk/websocket": "1.2.*"
+        "textalk/websocket": "1.2.*",
+        "monolog/monolog": "1.21.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
     }
 }
