--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
         "textalk/websocket": "1.2.*",
-        "monolog/monolog": "1.21.*"
+        "monolog/monolog": "1.21.*",
+        "hassankhan/config": "0.10.*",
+        "webmozart/path-util": "2.3.*"
     },
     "autoload": {
         "psr-4": {
